# django_celery_test

./: README.md  pyproject.toml
index_app/: urls.py  views.py
server/: __init__.py  celery.py  settings.py  urls.py
